frame/support/test/tests/construct_runtime_ui/more_than_256_modules.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime where
		UncheckedExtrinsic = UncheckedExtrinsic,
		Block = Block,
		NodeBlock = Block,
	{
		System: system::{} = 255,
		Pallet256: pallet256::{},
	}
}

fn main() {}
